fix: (swagger) location 설정 완료.
